--- a/css/back2.css
+++ b/css/back2.css
@@ -52,7 +52,7 @@ p{
     padding:0px 20px 30px 40px;
 }
 .divpro{
-    height: 280PX;
+    padding: 20px 40px 70px 20px;
     width: 60%;
     color: #055052;
     background-color: #FFF8E5;
