--- a/css/head.css
+++ b/css/head.css
@@ -52,7 +52,7 @@ padding: 0px;
     border-radius: 20px;
     text-decoration:none;
     font-size: 1.2rem;
-  font-family: 'Roboto Mono', monospace;;
+  font-family: 'Roboto Mono', monospace;
     font-weight: bold;
   padding: 10px;
 }
