--- a/css/back2.css
+++ b/css/back2.css
@@ -41,6 +41,7 @@ h3{
     padding: 15px;
     margin: 15px;
     font-family: 'Pacifico', cursive;
+    font-weight:bold;
     font-size: 20px;
     
 }
